--- a/advantage-kingdom/views/areas.ejs
+++ b/advantage-kingdom/views/areas.ejs
@@ -7,8 +7,7 @@
   <% areas.forEach(area => { %>
     <div class="area">
       <div class="area-header">
-        <!-- Log the image path -->
-        <p><%= area.image %></p> <!-- This will display the image path -->
+        <p><%= area.image %></p> <!-- Log image path -->
         <img src="<%= area.image %>" alt="<%= area.name %> Image" class="area-image" />
         <div class="area-text">
           <h2><%= area.name %></h2>
